Add interactive web application for Life Expectancy ML project
- Created Streamlit app with 6 interactive pages (Overview, Forecast, ML Pipeline, Model Performance, Feature Analysis, Global Trends)
- Added comprehensive documentation (README, USAGE_GUIDE, PROJECT_SUMMARY, FEATURES)
- Implemented country selection with 200+ countries
- Added 15+ interactive Plotly visualizations
- Fixed NaN issues in Global Trends improvements section
- Included requirements.txt and run script
- Model performance: R²=0.959, RMSE=1.76 years
- Forecasts for 2025-2030 available for all countries

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
-*.zip
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# Environment
+venv/
+env/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Backups
+*.backup
+*.bak
+
+# Streamlit
+.streamlit/
+
+# Data (keep original data files but ignore temp)
+*.tmp
+*.cache
